--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "experiment1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqXNwBOYZgndim3Blsl9qj",
+      "authorship_tag": "ABX9TyPAE5HbvctkLwFRlEKEfE4Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,6 +56,49 @@
             "3rd name is Kichu\n",
             "dict_keys([1, 2, 3, 4])\n",
             "dict_values(['Anu', 'Minnu', 'Kichu', 'Ammu'])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-k0GpesadSv-"
+      },
+      "source": [
+        "BOOLEAN VALUES"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TVZs6ASddVb2",
+        "outputId": "088c0d07-a0a0-44c7-b439-c2e748695d00"
+      },
+      "source": [
+        "print(10>9)\n",
+        "print(10==9)\n",
+        "print(10<9)\n",
+        "#boolean program with built in method bool()\n",
+        "print(\"boolean program with built in method bool()\")\n",
+        "x=5\n",
+        "y=10\n",
+        "print(bool(x==y))\n"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "False\n",
+            "boolean program with built in method bool()\n",
+            "False\n"
           ]
         }
       ]
