--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "experiment1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAE5HbvctkLwFRlEKEfE4Y",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOaivgqgPHXvly1lyM6NaCV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,6 +103,92 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y3XRxGuwfUKo"
+      },
+      "source": [
+        "DATA TYPES"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rxwMGengft28",
+        "outputId": "9f67826f-8af5-4043-99bb-ccef1a5ccf4e"
+      },
+      "source": [
+        "s=1\n",
+        "print(type(s))\n",
+        "a=\"hello\"\n",
+        "print(type(a))\n",
+        "b=[1,2,3]\n",
+        "print(type(b))\n",
+        "c={1:'hai',2:'everyone'}\n",
+        "print(type(c))\n",
+        "d=True\n",
+        "print(type(d))\n",
+        "e=1,2\n",
+        "print(type(e))\n",
+        "f={\"a\",\"b\"}\n",
+        "print(type(f))\n",
+        "g=()\n",
+        "print(type(g))\n",
+        "h=bytes()\n",
+        "print(type(h))\n",
+        "i=bytearray()\n",
+        "print(type(i))\n",
+        "j=range(4)\n",
+        "print(type(j))\n",
+        "\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'str'>\n",
+            "<class 'list'>\n",
+            "<class 'dict'>\n",
+            "<class 'bool'>\n",
+            "<class 'tuple'>\n",
+            "<class 'set'>\n",
+            "<class 'tuple'>\n",
+            "<class 'bytes'>\n",
+            "<class 'bytearray'>\n",
+            "<class 'range'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VS2R-ngqh_ad"
+      },
+      "source": [
+        "LIST "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Chxb-iwxiC6G"
+      },
+      "source": [
+        "list1=['d','a','t','a','s','c','i','e','n','c','e'\n",
+        "print(list1[0])\n",
+        "print(list1[0])"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
