--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -6,7 +6,7 @@
       "name": "experiment1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOaivgqgPHXvly1lyM6NaCV",
+      "authorship_tag": "ABX9TyPXaqvEKb6XCrUPfknURJfb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "print(d.keys())\n",
         "print(d.values())"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
         "y=10\n",
         "print(bool(x==y))\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "print(type(j))\n",
         "\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,15 +180,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Chxb-iwxiC6G"
+        "id": "Chxb-iwxiC6G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7f435698-633f-40e1-93cd-3922dce44549"
       },
       "source": [
-        "list1=['d','a','t','a','s','c','i','e','n','c','e'\n",
-        "print(list1[0])\n",
-        "print(list1[0])"
+        "list=['d','a','t','a','s','c','i','e','n','c','e']\n",
+        "print(list[0])\n",
+        "print(list[4])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "d\n",
+            "s\n"
+          ]
+        }
+      ]
     }
   ]
 }
