--- a/Experiment4.ipynb
+++ b/Experiment4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Experiment4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMQxkokgMK297rC1sv71USY",
+      "authorship_tag": "ABX9TyOzjfUmvVU7xkrCppZtYu0B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
         "outputId": "b7642ab1-7149-4ec6-bf84-4dd25cd1fb42"
       },
       "source": [
-        "\n",
+        "#printing first rows(5) with head\n",
         "movies=pd.read_csv(\"IMDb names.csv\")\n",
         "print(movies.head(5))"
       ],
@@ -84,6 +84,8 @@
         "outputId": "f25f6bb6-82c2-4fb0-a7b3-4f499c1a2b3d"
       },
       "source": [
+        "#describe statistics\n",
+        "\n",
         "print(movies.describe())"
       ],
       "execution_count": 7,
@@ -110,12 +112,81 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kpUWU1svUe3e"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kpUWU1svUe3e",
+        "outputId": "612759b0-e551-4b6b-904f-9f25bf94fe97"
       },
       "source": [
-        "\n"
+        "#check the column names\n",
+        "print(\"column names:%s\"%movies.columns.values)\n"
       ],
-      "execution_count": 5,
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "column names:['imdb_name_id' 'name' 'birth_name' 'height' 'bio' 'birth_details'\n",
+            " 'date_of_birth' 'place_of_birth' 'death_details' 'date_of_death'\n",
+            " 'place_of_death' 'reason_of_death' 'spouses_string' 'spouses' 'divorces'\n",
+            " 'spouses_with_children' 'children']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wcCqdpuqbe6-",
+        "outputId": "27624692-9c51-4d98-a96b-acd67b3acf29"
+      },
+      "source": [
+        "print(movies.dtypes)\n",
+        "print(movies.shape)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "imdb_name_id              object\n",
+            "name                      object\n",
+            "birth_name                object\n",
+            "height                   float64\n",
+            "bio                       object\n",
+            "birth_details             object\n",
+            "date_of_birth             object\n",
+            "place_of_birth            object\n",
+            "death_details             object\n",
+            "date_of_death             object\n",
+            "place_of_death            object\n",
+            "reason_of_death           object\n",
+            "spouses_string            object\n",
+            "spouses                    int64\n",
+            "divorces                   int64\n",
+            "spouses_with_children      int64\n",
+            "children                   int64\n",
+            "dtype: object\n",
+            "(297705, 17)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "weeCRp2KbsYS"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
