--- a/Experiment4.ipynb
+++ b/Experiment4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Experiment4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzjfUmvVU7xkrCppZtYu0B",
+      "authorship_tag": "ABX9TyPcr3Me+ytLkK/+Te8n6V4X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,13 +181,78 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "weeCRp2KbsYS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "weeCRp2KbsYS",
+        "outputId": "144b7c5b-8222-42e2-8317-1633b379f220"
       },
       "source": [
-        ""
+        "#check null data\n",
+        "print(\"NULL VALUES:\\n\")\n",
+        "print(movies.isna())\n",
+        "print(movies.isna().sum())\n",
+        "print(\"null values %s\" %movies.isnull().values.any())\n",
+        "print(\"total null values %d\" %movies.isna().sum().sum())\n",
+        "print(movies.describe())\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "NULL VALUES:\n",
+            "\n",
+            "        imdb_name_id   name  ...  spouses_with_children  children\n",
+            "0              False  False  ...                  False     False\n",
+            "1              False  False  ...                  False     False\n",
+            "2              False  False  ...                  False     False\n",
+            "3              False  False  ...                  False     False\n",
+            "4              False  False  ...                  False     False\n",
+            "...              ...    ...  ...                    ...       ...\n",
+            "297700         False  False  ...                  False     False\n",
+            "297701         False  False  ...                  False     False\n",
+            "297702         False  False  ...                  False     False\n",
+            "297703         False  False  ...                  False     False\n",
+            "297704         False  False  ...                  False     False\n",
+            "\n",
+            "[297705 rows x 17 columns]\n",
+            "imdb_name_id                  0\n",
+            "name                          0\n",
+            "birth_name                    0\n",
+            "height                   253024\n",
+            "bio                       93007\n",
+            "birth_details            187093\n",
+            "date_of_birth            187093\n",
+            "place_of_birth           193713\n",
+            "death_details            257772\n",
+            "date_of_death            257772\n",
+            "place_of_death           260667\n",
+            "reason_of_death          275011\n",
+            "spouses_string           252353\n",
+            "spouses                       0\n",
+            "divorces                      0\n",
+            "spouses_with_children         0\n",
+            "children                      0\n",
+            "dtype: int64\n",
+            "null values True\n",
+            "total null values 2217505\n",
+            "             height        spouses  ...  spouses_with_children       children\n",
+            "count  44681.000000  297705.000000  ...          297705.000000  297705.000000\n",
+            "mean     175.007162       0.208690  ...               0.104866       0.196439\n",
+            "std       14.055496       0.570208  ...               0.349762       0.721257\n",
+            "min       20.000000       0.000000  ...               0.000000       0.000000\n",
+            "25%      168.000000       0.000000  ...               0.000000       0.000000\n",
+            "50%      175.000000       0.000000  ...               0.000000       0.000000\n",
+            "75%      183.000000       0.000000  ...               0.000000       0.000000\n",
+            "max      990.000000      12.000000  ...               6.000000      16.000000\n",
+            "\n",
+            "[8 rows x 5 columns]\n"
+          ]
+        }
+      ]
     }
   ]
 }
