--- a/Experiment4.ipynb
+++ b/Experiment4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Experiment4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPcr3Me+ytLkK/+Te8n6V4X",
+      "authorship_tag": "ABX9TyN3KVmBah9GVMja0N9takFq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,6 +120,7 @@
       },
       "source": [
         "#check the column names\n",
+        "\n",
         "print(\"column names:%s\"%movies.columns.values)\n"
       ],
       "execution_count": 8,
@@ -185,10 +186,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "weeCRp2KbsYS",
-        "outputId": "144b7c5b-8222-42e2-8317-1633b379f220"
+        "outputId": "c0cd6891-8326-4792-f92d-de5bb270dbdc"
       },
       "source": [
         "#check null data\n",
+        "\n",
         "print(\"NULL VALUES:\\n\")\n",
         "print(movies.isna())\n",
         "print(movies.isna().sum())\n",
@@ -197,7 +199,7 @@
         "print(movies.describe())\n",
         "\n"
       ],
-      "execution_count": 15,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,6 +255,149 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fWNkBMFHgNzn",
+        "outputId": "43e69961-fb2a-481f-d788-0c42328b5b53"
+      },
+      "source": [
+        "#clean the dataset by droping the na values.\n",
+        "clean_movies = movies.dropna(how='any')\n",
+        "movies=movies.dropna(how='any')\n",
+        "print(clean_movies)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       imdb_name_id            name  ... spouses_with_children  children\n",
+            "0         nm0000001    Fred Astaire  ...                     1         2\n",
+            "1         nm0000002   Lauren Bacall  ...                     2         3\n",
+            "3         nm0000004    John Belushi  ...                     0         0\n",
+            "4         nm0000005  Ingmar Bergman  ...                     5         8\n",
+            "5         nm0000006  Ingrid Bergman  ...                     2         4\n",
+            "...             ...             ...  ...                   ...       ...\n",
+            "245609    nm4881574      Chris Kyle  ...                     1         2\n",
+            "252816    nm5410196     Tony Mendez  ...                     2         4\n",
+            "262067    nm6284246     August Ames  ...                     0         0\n",
+            "265203    nm6649402     Salman Shah  ...                     0         0\n",
+            "270769    nm7390393  Aachi Manorama  ...                     1         1\n",
+            "\n",
+            "[4539 rows x 17 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YtHqiA-RgOrq",
+        "outputId": "6aa409b7-4e85-42ef-a2b8-77ae7cc098a0"
+      },
+      "source": [
+        "print(clean_movies.shape)\n",
+        "#ues fillna attribues of pandas\n",
+        "#for filling up missing values in all columns\n",
+        "\n",
+        "movies.fillna(value=0,inplace=True)\n"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4539, 17)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tlwObfBFgPCT",
+        "outputId": "eb8597bf-437c-440e-fa25-5c8d33e702fe"
+      },
+      "source": [
+        "# for some specfific columns we can just choose select those columns \n",
+        "movies[['spouses', 'height']]=movies[['spouses', 'height']].fillna(value=0)\n",
+        "\n",
+        "movies['height'].fillna(movies['height'].mean(), inplace=True) \n",
+        "print(movies)\n"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       imdb_name_id            name  ... spouses_with_children  children\n",
+            "0         nm0000001    Fred Astaire  ...                     1         2\n",
+            "1         nm0000002   Lauren Bacall  ...                     2         3\n",
+            "3         nm0000004    John Belushi  ...                     0         0\n",
+            "4         nm0000005  Ingmar Bergman  ...                     5         8\n",
+            "5         nm0000006  Ingrid Bergman  ...                     2         4\n",
+            "...             ...             ...  ...                   ...       ...\n",
+            "245609    nm4881574      Chris Kyle  ...                     1         2\n",
+            "252816    nm5410196     Tony Mendez  ...                     2         4\n",
+            "262067    nm6284246     August Ames  ...                     0         0\n",
+            "265203    nm6649402     Salman Shah  ...                     0         0\n",
+            "270769    nm7390393  Aachi Manorama  ...                     1         1\n",
+            "\n",
+            "[4539 rows x 17 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T-l1JSg-gPDM",
+        "outputId": "12b3831e-339a-40d6-cf99-7416579f4f89"
+      },
+      "source": [
+        "duplicate_rows = movies[movies.duplicated()]\n",
+        "\n",
+        "print (\"number of duplicate rows: \", duplicate_rows.shape)\n",
+        "\n"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number of duplicate rows:  (0, 17)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XS6rBtIF50-v"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
