--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -6,7 +6,7 @@
       "name": "experiment1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXaqvEKb6XCrUPfknURJfb",
+      "authorship_tag": "ABX9TyPJxAs5HD6WCfuv3uBTmYwt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,21 +184,72 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f435698-633f-40e1-93cd-3922dce44549"
+        "outputId": "7fbe42b8-10a2-430c-8fbc-2409c29fbcbe"
       },
       "source": [
-        "list=['d','a','t','a','s','c','i','e','n','c','e']\n",
+        "list=['Anu','Minnu','Kichu','Ammu']\n",
         "print(list[0])\n",
-        "print(list[4])"
+        "print(list[2])\n",
+        "print(list[3])\n",
+        "print(list[0:2])\n",
+        "print(list[:])\n",
+        "print(list[-2])"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "d\n",
-            "s\n"
+            "Anu\n",
+            "Kichu\n",
+            "Ammu\n",
+            "['Anu', 'Minnu']\n",
+            "['Anu', 'Minnu', 'Kichu', 'Ammu']\n",
+            "Kichu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "function"
+      ],
+      "metadata": {
+        "id": "mpjca5v_LMfI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fact(n):\n",
+        "  if n==1:\n",
+        "    return n\n",
+        "  else:\n",
+        "    return n*fact(n-1)\n",
+        "num=6\n",
+        "if num<0:\n",
+        "  print(\"factorial not possible\")\n",
+        "elif num==0:\n",
+        "  print(\"factorial of 0 is 1\")\n",
+        "else:\n",
+        "  print(\"factorial of\",num,\"is\",fact(num))"
+      ],
+      "metadata": {
+        "id": "4i3qPoMELO6b",
+        "outputId": "3c4be5a0-208b-4bf0-da11-9cc6e1103f70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "factorial of 6 is 720\n"
           ]
         }
       ]
