--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -6,7 +6,7 @@
       "name": "experiment1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPJxAs5HD6WCfuv3uBTmYwt",
+      "authorship_tag": "ABX9TyNRyIu3CK64zodCnrJfi+RE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,6 +57,46 @@
             "3rd name is Kichu\n",
             "dict_keys([1, 2, 3, 4])\n",
             "dict_values(['Anu', 'Minnu', 'Kichu', 'Ammu'])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SET"
+      ],
+      "metadata": {
+        "id": "Gmg43CSlSc_W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Different types of sets in Python\n",
+        "# set of integers\n",
+        "my_set = {1, 2, 3}\n",
+        "print(my_set)\n",
+        "\n",
+        "# set of mixed datatypes\n",
+        "my_set = {1.0, \"Hello\", (1, 2, 3)}\n",
+        "print(my_set)"
+      ],
+      "metadata": {
+        "id": "Ihj8cQONSdn1",
+        "outputId": "440db042-3727-4567-a5d8-6b0e54e87b04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3}\n",
+            "{'Hello', 1.0, (1, 2, 3)}\n"
           ]
         }
       ]
@@ -195,7 +235,7 @@
         "print(list[:])\n",
         "print(list[-2])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,13 +283,64 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "factorial of 6 is 720\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TUPLES"
+      ],
+      "metadata": {
+        "id": "2AtOz2bfTJwV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Different types of tuples\n",
+        "\n",
+        "# Empty tuple\n",
+        "my_tuple = ()\n",
+        "print(my_tuple)\n",
+        "\n",
+        "# Tuple having integers\n",
+        "int_tuple = (1, 2, 3)\n",
+        "print(int_tuple)\n",
+        "\n",
+        "# tuple with mixed datatypes\n",
+        "mix_tuple = (1, \"Hello\", 3.4)\n",
+        "print(mix_tuple)\n",
+        "\n",
+        "# nested tuple\n",
+        "my_tuple = (\"mouse\", [8, 4, 6], (1, 2, 3))\n",
+        "print(my_tuple)"
+      ],
+      "metadata": {
+        "id": "b3lk-5W4TKEc",
+        "outputId": "133cebd8-bb59-4648-c21b-15ef9cf65c94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "()\n",
+            "(1, 2, 3)\n",
+            "(1, 'Hello', 3.4)\n",
+            "('mouse', [8, 4, 6], (1, 2, 3))\n"
           ]
         }
       ]
