--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Experiment2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPWbHVIhKVUArHftXGkmNbi",
+      "authorship_tag": "ABX9TyP4JKEeWqkQX+K5QIZUFb4R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "for r in R:\n",
         "  print(r)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
         "for r in R:\n",
         "  print(r)\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "import numpy as np \n",
         "       \n",
         "# 1D array \n",
-        "arr = [20, 2, .2, 10, 4]  \n",
+        "arr = [20, 2, 2, 10, 4]  \n",
         "   \n",
         "print(\"\\nSum of 1D array : \", np.sum(arr))\n",
         "\n",
@@ -155,7 +155,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,7 +200,7 @@
         "\n",
         "print(np.dot(b, a))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
