--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Experiment2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP4JKEeWqkQX+K5QIZUFb4R",
+      "authorship_tag": "ABX9TyPz+VFuU2q6ozHyGnmzo22g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,6 +208,36 @@
           "text": [
             "[[3 3]\n",
             " [9 9]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#element-wise Multiplication\n",
+        "import numpy as np\n",
+        "\n",
+        "a1 = np.array([[12,46,23,7,2],[3,5,8,3,6]])\n",
+        "a2 = np.array([[15,26,2,17,22],[13,8,9,3,4]])\n",
+        "\n",
+        "print(np.multiply(a1,a2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cyhmmidZMKhk",
+        "outputId": "8cd7bff9-aa40-4586-95df-0619e27ebe3b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 180 1196   46  119   44]\n",
+            " [  39   40   72    9   24]]\n"
           ]
         }
       ]
