--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Experiment2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPz+VFuU2q6ozHyGnmzo22g",
+      "authorship_tag": "ABX9TyOzeutu5sIfBUzaHLIcrUi5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -238,6 +238,34 @@
           "text": [
             "[[ 180 1196   46  119   44]\n",
             " [  39   40   72    9   24]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#transpose\n",
+        "import numpy as np\n",
+        "Ms=np.matrix('[4,1 ; 12,3]')\n",
+        "Tr=Ms.transpose()\n",
+        "print(Tr)"
+      ],
+      "metadata": {
+        "id": "iTtko0JMOXmL",
+        "outputId": "71ee2894-e6ae-4898-ce03-a35c69e6fec8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 4 12]\n",
+            " [ 1  3]]\n"
           ]
         }
       ]
