--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Experiment2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzeutu5sIfBUzaHLIcrUi5",
+      "authorship_tag": "ABX9TyPmAFPV23ISiUhl7RWMvm/2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -252,11 +252,11 @@
         "print(Tr)"
       ],
       "metadata": {
-        "id": "iTtko0JMOXmL",
-        "outputId": "71ee2894-e6ae-4898-ce03-a35c69e6fec8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iTtko0JMOXmL",
+        "outputId": "71ee2894-e6ae-4898-ce03-a35c69e6fec8"
       },
       "execution_count": 4,
       "outputs": [
@@ -266,6 +266,52 @@
           "text": [
             "[[ 4 12]\n",
             " [ 1  3]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#SVD\n",
+        "import numpy as np\n",
+        "A=np.array([[3,4,3],[1,2,3],[4,2,1]])\n",
+        "U,D,VT=np.linalg.svd(A)\n",
+        "A_ans = (U @ np.diag(D) @ VT)\n",
+        "print(U)\n",
+        "print()\n",
+        "print(D)\n",
+        "print()\n",
+        "print(VT)\n",
+        "print()\n",
+        "print(A_ans)"
+      ],
+      "metadata": {
+        "id": "BuYy-JzkPP-N",
+        "outputId": "42f79c1b-85d9-4342-89ca-53f58d9e3690",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-0.73553325 -0.18392937 -0.65204358]\n",
+            " [-0.42657919 -0.62196982  0.65664582]\n",
+            " [-0.52632788  0.76113306  0.37901904]]\n",
+            "\n",
+            "[7.87764972 2.54031671 0.69958986]\n",
+            "\n",
+            "[[-0.60151068 -0.61540527 -0.5093734 ]\n",
+            " [ 0.73643349 -0.18005275 -0.65210944]\n",
+            " [ 0.30959751 -0.76737042  0.5615087 ]]\n",
+            "\n",
+            "[[3. 4. 3.]\n",
+            " [1. 2. 3.]\n",
+            " [4. 2. 1.]]\n"
           ]
         }
       ]
